[gd_scene load_steps=3 format=3 uid="uid://dg8qrqf3xyi45"]

[ext_resource type="Script" path="res://scenes/ui/CombatControl.gd" id="1_hiev6"]
[ext_resource type="Script" path="res://scenes/ui/combat_participants_control.gd" id="2_p72qm"]


[node name="CombatControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hiev6")

[node name="PickDemonControl" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 2016.0
offset_top = -74.0
offset_right = 2556.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2

[node name="PickDemonHBoxContainer" type="HBoxContainer" parent="PickDemonControl"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CombatParticipantsControl" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -317.0
offset_right = 270.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_p72qm")

[node name="ColorRect" type="ColorRect" parent="CombatParticipantsControl"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CombatParticipantsControl"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CombatParticipantsControl/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="SectioLabel" type="Label" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fight in: "
horizontal_alignment = 1

[node name="Label" type="Label" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enemy Units"
horizontal_alignment = 1

[node name="EnemyUnitsHBoxContainer" type="HBoxContainer" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Your Units"
horizontal_alignment = 1

[node name="FriendlyUnitsHBoxContainer" type="HBoxContainer" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FleeButton" type="Button" parent="CombatParticipantsControl/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Flee"

[connection signal="pressed" from="CombatParticipantsControl/MarginContainer/VBoxContainer/FleeButton" to="CombatParticipantsControl" method="_on_flee_button_pressed"]
